# AirShow

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build-and-run-windowed.bat  build-and-run-windowed.sh  build-and-run.bat  build-and-run.sh
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-discovery-protocol-abstraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-display-receiver-ui/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-airplay/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-dlna/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-google-cast/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-security-hardening/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-VALIDATION.md
.planning/phases/08-miracast/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-RESEARCH.md  08-VALIDATION.md
.planning/phases/09-receiver-protocol-foundation/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-HUMAN-UAT.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-android-sender-mvp/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-HUMAN-UAT.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/quick/260411-x6a-fix-casthandler-crash-use-qt-queuedconne/: 260411-x6a-PLAN.md  260411-x6a-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
qml/: ApprovalDialog.qml  HudOverlay.qml  IdleScreen.qml  main.qml
resources/dlna/: MediaRenderer.xml  avt-scpd.xml  cm-scpd.xml  rc-scpd.xml
sender/: .metadata  README.md  pubspec.yaml
sender/android/app/: build.gradle.kts
sender/android/app/src/main/: AndroidManifest.xml
sender/android/app/src/main/kotlin/com/airshow/airshow_sender/: AirShowCaptureService.kt  H264Encoder.kt  MainActivity.kt
sender/ios/Runner/: Info.plist
sender/ios/Runner.xcodeproj/: project.pbxproj
sender/lib/: app.dart  main.dart
sender/lib/discovery/: discovery_cubit.dart  discovery_state.dart  mdns_service.dart
sender/lib/session/: airshow_channel.dart  session_cubit.dart  session_state.dart
sender/lib/ui/: mirroring_screen.dart  receiver_list_screen.dart
sender/macos/Runner.xcodeproj/: project.pbxproj
sender/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
sender/macos/Runner/Configs/: AppInfo.xcconfig
sender/test/: discovery_cubit_test.dart  session_cubit_test.dart  widget_test.dart
sender/windows/: CMakeLists.txt
sender/windows/runner/: Runner.rc  main.cpp
src/: main.cpp
src/cast/: cast_auth_sigs.h  cast_channel.proto
src/discovery/: AvahiAdvertiser.cpp  AvahiAdvertiser.h  BonjourAdvertiser.cpp  BonjourAdvertiser.h  DiscoveryManager.cpp  DiscoveryManager.h  ServiceAdvertiser.cpp  ServiceAdvertiser.h  UpnpAdvertiser.cpp  UpnpAdvertiser.h
src/pipeline/: DecoderInfo.h  MediaPipeline.cpp  MediaPipeline.h
src/platform/: WindowsFirewall.cpp  WindowsFirewall.h
src/protocol/: AirPlayHandler.cpp  AirPlayHandler.h  AirShowHandler.cpp  AirShowHandler.h  CastHandler.cpp  CastHandler.h  CastSession.cpp  CastSession.h  DlnaHandler.cpp  DlnaHandler.h  MiracastHandler.cpp  MiracastHandler.h  ProtocolHandler.h  ProtocolManager.cpp  ProtocolManager.h
src/security/: SecurityManager.cpp  SecurityManager.h
src/settings/: AppSettings.cpp  AppSettings.h
src/ui/: AudioBridge.cpp  AudioBridge.h  ConnectionBridge.cpp  ConnectionBridge.h  ReceiverWindow.cpp  ReceiverWindow.h  SettingsBridge.cpp  SettingsBridge.h  VideoFrameSink.cpp  VideoFrameSink.h
src/web/: WebInterface.cpp  WebInterface.h
tests/: CMakeLists.txt  test_airplay.cpp  test_airshow.cpp  test_cast.cpp  test_discovery.cpp  test_display.cpp  test_dlna.cpp  test_miracast.cpp  test_pipeline.cpp  test_security.cpp
